jellyfin_server/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-deployment
  namespace: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  replicas: 1
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - env:
        - name: JELLYFIN_PublishedServerUrl 
          valueFrom:
            secretKeyRef:
              name: jellyfin-secrets
              key: SERVER_URL
        - name: PGID
          value: "1000"
        - name: PUID
          value: "1000"
        - name: TZ
          value: Europe/Zurich
        securityContext:
          privileged: false
        name: jellyfin
        image: lscr.io/linuxserver/jellyfin:latest
        ports:
        - containerPort: 8096
          name: http-tcp
          protocol: TCP
        - containerPort: 8920
          name: https-tcp
          protocol: TCP
        - containerPort: 1900
          name: dlna-udp
          protocol: UDP
        - containerPort: 7359
          name: discovery-udp
          protocol: UDP
        volumeMounts:
        - mountPath: /home/jellyfin
          name: jellyfin-volume
        - mountPath: /config
          name: jellyfin-config
        - mountPath: /data/movies
          name: jellyfin-movies
        - mountPath: /data/tvshows
          name: jellyfin-tvshows
      volumes:
      - name: jellyfin-volume
        persistentVolumeClaim:
          claimName: jellyfin-pvc
      - name: jellyfin-config
        persistentVolumeClaim:
          claimName: jellyfin-config-pvc
      - name: jellyfin-movies
        persistentVolumeClaim:
          claimName: jellyfin-movies-pvc
      - name: jellyfin-tvshows
        persistentVolumeClaim:
          claimName: jellyfin-tvshows-pvc
