jellyfin_server/jellyfin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: jellyfin
spec:
  selector:
    app: jellyfin
  type: ClusterIP
  ports:
    - port: 8096
      targetPort: 8096
