jellyfin_server/jellyfin-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jellyfin-network-policy
  namespace: jellyfin
spec:
  podSelector:
    matchLabels:
      app: jellyfin
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: radarr
      ports:
        - protocol: TCP
          port: 7878
    - from:
      - podSelector:
          matchLabels:
            app: sonarr
      ports:
        - protocol: TCP
          port: 8989
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: radarr
      ports:
        - protocol: TCP
          port: 7878
    - to:
      - podSelector:
          matchLabels:
            app: sonarr
      ports:
        - protocol: TCP
          port: 8989
